--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Activity Generator</title>
+  <title>Activity Generator | Home</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,13 +13,14 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Activity Generator</a>
+      <a id="logo-container" href="https://final-project-jackzimmerman.c9users.io/#" class="brand-logo">Activity Generator</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#"></a></li>
+        <li><a href="aboutus">About Us</a></li>
       </ul>
+      
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">About Us</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -34,7 +35,7 @@
           <h5 class="header col s12 light">An ultra-customizable activity selector for anyone with time to spare</h5>
         </div>
         <div class="row center">
-          <a href="/quiz2" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+          <a href="/quiz2" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">take our quiz!</a>
         </div>
         <br><br>
 
@@ -107,8 +108,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">About Us</h5>
-          <p class="grey-text text-lighten-4">We are two students currently doing a ten day introductory coding course with the Upperline School of Code in New York City.</p>
+          <h5 class="white-text"></h5>
+          <p class="grey-text text-lighten-4"></p>
 
         </div>
         <div class="col l3 s12">
