--- a/app/views/quiz2.erb
+++ b/app/views/quiz2.erb
@@ -3,7 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parallax Template - Materialize</title>
+  <title>Activity Generator | Customize</title>
+
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,13 +14,13 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Activity Generator</a>
+      <a id="logo-container" href="index" class="brand-logo">Activity Generator</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#"></a></li>
+        <li><a href="aboutus">About Us</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">About Us</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -39,39 +40,97 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="http://gymlion.com/wp-content/uploads/2015/03/Warm-up.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="http://img.aws.livestrongcdn.com/ls-article-image-673/cpi.studiod.com/www_livestrong_com/photos.demandstudios.com/getty/article/94/19/463278435_XS.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
   <div class="container">
     <div class="section">
+        
+        
+        
+<h4>How much physical activity would you like to do?</h4>
+      
+<form method="POST" action="/results">
 
+    <p>
+      <input value = "zero" name="activity" type="radio" id="zero" required  />
+      <label for="zero">None</label>
+    </p>
+    <p>
+      <input value = "little" name="activity" type="radio" id="little"  />
+      <label for="little">A little</label>
+    </p>
+    <p>
+      <input value = "lot" name="activity" type="radio" id="lot"  />
+      <label for="lot">A lot</label>
+    </p>
+    <p>        
+
+    <h4>How long do you want to do your activity?</h4>
+
+
+    <p>
+      <input value = "thirty" name="time" type="radio" id="thirty"  required/>
+      <label for="thirty">30 minutes - 1 hour</label>
+    </p>
+    <p>
+      <input value = "one" name="time" type="radio" id="one" />
+      <label for="one">1 - 2 hours</label>
+    </p>
+    <p>
+      <input value = "two" name="time" type="radio" id="two"  />
+      <label for="two">2+ hours</label>
+    </p>
+    <p>
+<h4>How much money would you like to spend?</h4>             
+
+
+    <p>
+      <input value = "free" name="price" type="radio" id="free" required/>
+      <label for="free">None</label>
+    </p>
+    <p>
+      <input value= "little" name="price" type="radio" id="alittle" />
+      <label for="alittle">A little (<$20)</label3>
+    </p>
+    <p>
+      <input value = "lot" name="price" type="radio" id="alot"  />
+      <label for="alot">A lot($20+)</label>
+    </p>
+    <p>
+<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+  </button>          
+      </form>
+      
+      
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center brown-text"><i class="material-icons"></i></h2>
+            <h5 class="center"></h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light"></p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h2 class="center brown-text"><i class="material-icons"></i></h2>
+            <h5 class="center"></h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light"></p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center brown-text"><i class="material-icons"></i></h2>
+            <h5 class="center"></h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light"></p>
           </div>
         </div>
       </div>
@@ -97,8 +156,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">About Us</h5>
-          <p class="grey-text text-lighten-4">We are two students currently doing a ten day introductory coding course with the Upperline School of Code in New York City.</p>
+          <h5 class="white-text"></h5>
+          <p class="grey-text text-lighten-4"></p>
 
 
         </div>
