--- a/app/views/aboutus.erb
+++ b/app/views/aboutus.erb
@@ -46,8 +46,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons"></i></h2>
             <h5 class="center">Jack</h5>
-
-            <p class="light">Jack is a baseball player, drummer, coder, film maker, and black belt in Tae Kwon Do.  He wanted to increase his knowledge in coding because he had an intrest in technology, and wanted to be able to create websites.  He attended the Upperline 10-doy Web Design program where he leanred ruby, HTML, and CSS, and created this website.</p>
+            <p class="light">Jack is a baseball player, drummer, coder, film maker, and black belt in Tae Kwon Do. He wanted to increase his knowledge in coding because he had an interest in technology, and wanted to be able to create websites. He attended the Upperline 10-day Web Design program where he learned Ruby, HTML, and CSS, and created this website.</p>
           </div>
         </div>
 
@@ -55,8 +54,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons"></i></h2>
             <h5 class="center"></h5>
-
-            <p class="light"></p>
+            <p class="light">&emsp;&emsp;&emsp;<img src="https://media.licdn.com/mpr/mpr/shrink_200_200/AAEAAQAAAAAAAAQ3AAAAJDhiN2JlZGY2LWRhMmEtNDUxOS05MmM4LTQ1OTFmMWJkNmZjOA.png"></p>
           </div>
         </div>
 
@@ -64,37 +62,12 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons"></i></h2>
             <h5 class="center">Nathaniel</h5>
-
-            <p class="light">Nate is a professional coder working with Upperline. He mainly works in Python and Javascript but sometimes plays around with Ruby, HTML, and CSS. He's a black belt just like Jack.</p>
+            <p class="light">Nate's a kid who lives in NYC. He started learning to code two weeks ago with Upperline. He runs, bikes, plays piano, plays guitar, skis, likes animals, likes people, likes cities, likes travelling, likes ice cream, likes caramel, is vegetarian, and has a brother and a sister. And a mom and a dad. He wishes he had a dog.</p>
           </div>
         </div>
       </div>
 
     </div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4></h4>
-          <p class="left-align light"></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h4 class="header col s12 light"></h4>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
