--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -13,7 +13,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="index" class="brand-logo">Activity Generator</a>
+      <a id="logo-container" href="/" class="brand-logo">Activity Generator</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="aboutus">About Us</a></li>
       </ul>
