Finalized version of Activity Generator

--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -53,7 +53,7 @@
       
         <h3>You should <%= @result%>!</h3>
         <h4>Link to your activity<a href = "<%= @result2%>"> here </a></h3>
-        <h6>If you want to take the quiz again, click<a href = "https://final-project-jackzimmerman.c9users.io/quiz2"> here</a></h3>
+        <h6>If you want to take the quiz again, click<a href = "quiz2"> here</a></h3>
       
       
       <div class="row">
