Finalized version of Activity Generator

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -63,7 +63,7 @@
             <h2 class="center brown-text"><i class="material-icons">schedule</i></h2>
             <h5 class="center">Time</h5>
 
-            <p class="light">We recognize that you're busy - you have things to do and places to be. With this in mind, we decided to allow our users to specifyd1how much spare time they have, and from there we provide you with an activity that fits your schedule perfectly.</p>
+            <p class="light">We recognize that you're busy - you have things to do and places to be. With this in mind, we decided to allow our users to specify how much spare time they have, and from there we provide you with an activity that fits your schedule perfectly.</p>
           </div>
         </div>
 
